Add scripted SA runtime tick hook